Arrumando rotas e banco de dados

--- a/views/admin/recipes/fields.njk
+++ b/views/admin/recipes/fields.njk
@@ -33,7 +33,7 @@
                 <div class="item">
                 <div class="title">Informações adicionais</div>
                 <div>
-                    <textarea name="name" cols="30" rows="10"></textarea>
+                    <textarea name="adicional_info" cols="30" rows="10"></textarea>
                 </div>   
 
            
