--- a/views/admin/recipes/create.njk
+++ b/views/admin/recipes/create.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/receitas">
+<form class="card" method="POST" action="/admin/recipes">
     <section class="details">
 
         <h3>Criando receita</h3>
