Mudando banco de dados

--- a/views/admin/recipes/create.njk
+++ b/views/admin/recipes/create.njk
@@ -6,6 +6,8 @@
     <section class="details">
 
         <h3>Criando receita</h3>
+    <button type="submit">Salvar receita</button>
+
 
         {% include 'admin/recipes/fields.njk' %}
 
