--- a/views/admin/recipes/fields.njk
+++ b/views/admin/recipes/fields.njk
@@ -1,41 +1,74 @@
-<button type="submit">Salvar receita</button>
-        <div class="item">
-                <div class="title">Imagem da receita</div>
-                <div>
-                    <input 
-                        type="url" 
-                        name="img_url" 
-                    >
-                </div>
+<div class="item">
+    <div class="title">Imagem da receita</div>
+    <div>
+        <input 
+            type="url"
+            name="img_url"
+            value="{{recipe.img_url}}"
+            placeholder="https://"
+        >
+    </div>
+</div>
 
-                <div class="item">
-                <div class="title">Ingredientes</div>
-                    <div id="ingredients">
-                        <div class="ingredient">
-                            <input type="text" name="ingredients[]" value="" placeholder="Ingrediente" />
-                    </div>
-                        </div>
-                    <button type="button" class="add-ingredient">Adicionar ingrediente</button>
+<div class="item" id="ingredients">
+    <div class="title">Ingredientes</div>
 
-                <div class="item">
-                    
-                <div class="title">Modo de preparo</div>
-                <div>
-                    <div id="passos">
-                        <div class="passo">
-                            <input type="text" name="passos[]" value="" placeholder="Passo" />
-                    </div>
-                        </div>
-                    <button type="button" class="add-passo">Adicionar novo passo</button>
-                </div> 
-                
+    {% for ingredient in recipe.ingredients %}
+        <div class="ingredient">
+            <input 
+                type="text"
+                name="ingredients[]"
+                value="{{ingredient}}"
+                placeholder="Ingrediente"
+            >
 
-                <div class="item">
-                <div class="title">Informações adicionais</div>
-                <div>
-                    <textarea name="adicional_info" cols="30" rows="10"></textarea>
-                </div>   
+        </div>
 
+        {% else %}
+
+        <div class="ingredient">
+            <input 
+                type="text"
+                name="ingredients[]"
+                value=""
+                placeholder="Ingrediente"
+            >
+        </div>
+        
+    {% endfor %}
+</div>
+<button type="button" class="add-ingredient">Adicionar novo ingrediente</button>
+
+<div class="item" id="passos">
+    <div class="title">Modo de preparo</div>
+        {% for preparo in recipe.preparos %}
+            <div class="passo">
+                <input 
+                    type="text"
+                    name="preparos[]"
+                    value="{{preparo}}"
+                    placeholder="Passo"
+                >
+            </div>
+        {% else %}
+            <div class="passo">
+                <input 
+                    type="text"
+                    name="preparos[]"
+                    value=""
+                    placeholder="Passo"
+                >
+            </div>
+        {% endfor %}
+</div>
+<button type="button" class="add-passo">Adicionar novo passo</button>
+
+<div class="item">
+    <div class="title">Informações adicionais</div>
+    <div>
+        <textarea name="adicional_info" id="info" cols="30" rows="10">{{recipe.adicional_info}}</textarea>
+    </div>
+</div>
            
 
 <script src="/js/button.js"></script>
