--- a/views/admin/recipes/show.njk
+++ b/views/admin/recipes/show.njk
@@ -5,28 +5,28 @@
 {%endblock%}
 
 {% block title%}
-    <title>{{receita.title}}</title>
+    <title>{{recipe.title}}</title>
 {%endblock%}
 
 
 {% block content%}
      <section class="recipe">
          <div class="por">
-             <h1>Receita: {{receita.title}}</h1>
-             <a href="/admin/recipes/edit/{{receita.id}}">Editar receita</a>
+             <h1>Receita: {{recipe.title}}</h1>
+             <a href="/admin/recipes/edit/{{recipe.id}}">Editar receita</a>
          </div>
         <div class="banner-img">
-            <img src="{{receita.image}}" alt="Imagem de {{receita.image}} ">
+            <img src="{{recipe.img_url}}" alt="Imagem de {{recipe.image}} ">
         </div>
         <div class="card-title">
-           <h1>{{receita.title}}</h1>
-           <p>por {{receita.author}}</p>
+           <h1>{{recipe.title}}</h1>
+           <p>por {{recipe.author}}</p>
         </div>
         <div class="topic " id="ingredients">
         <h1>Ingredientes</h1> 
         <div class="topic-content">
             <ul>
-               {% for ingredient in receita.ingredients%}
+               {% for ingredient in recipe.ingredients%}
                <li>{{ingredient}}</li>
                {%endfor%}
             </ul>
@@ -35,15 +35,15 @@
         <div class="topic" id="preparation">
         <h1>Modo de preparo</h1> 
             <ul>
-               {% for preparation in receita.preparation%}
-               <li>{{preparation}}</li>
+               {% for preparo in recipe.preparos%}
+               <li>{{preparo}}</li>
                {%endfor%}
             </ul>
           </div>
         </div>
         <div class="topic" id="information">
         <h1>Informações adicionais</h1> 
-            <p>{{receita.information}}</p>
+            <p>{{recipe.adicional_info}}</p>
         </div>
         </div>
     
