--- a/src/app/views/main/chefs.njk
+++ b/src/app/views/main/chefs.njk
@@ -6,7 +6,7 @@
         <div class="chefes">
             {% for chef in chefs %}
                 <div class="chef">
-                    <img src="{{chef.avatar_url}}" alt="">
+                    <img src="{{chef.src}}" alt="">
                     <div class="chef_name">
                         <h3 class="nome">{{chef.name}}</h3>
                     <div class="chef_recipes">{{chef.total_recipes}} receitas</div>
