--- a/src/app/views/main/index.njk
+++ b/src/app/views/main/index.njk
@@ -29,8 +29,8 @@
             <div class='gridf2'>
               {% for recipe in recipes %}
                 <div class="receita_foodfy">
-                      <a href="/main/receita/{{recipe.id}}">
-                    <img src="{{recipe.image}}" alt="">
+                      <a href="/main/receita/{{recipe.recipe_id}}">
+                    <img src="{{recipe.src}}" alt="">
                     </a>
                     <div class="receita_details">
                         <h3 class="nome_recipe">{{recipe.title}}</h3>
