--- a/src/app/views/admin/chef/create.njk
+++ b/src/app/views/admin/chef/create.njk
@@ -2,14 +2,36 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/admin/chef">
+<form class="card" method="POST" action="/admin/chef" enctype="multipart/form-data">
     <section class="details">
 
         <h3>Criando chef</h3>
     <button type="submit">Salvar chef</button>
 
 
-        {% include 'admin/chef/fields.njk' %}
+       <div class="item">
+    <div class="title">Nome</div>
+    <div>
+        <input 
+            type="text"
+            name="name"
+            value="{{ chef.name }}"
+        >
+    </div>
+</div>
+
+<div class="item">
+    <div class="title">Avatar</div>
+    <div class="chef_button">
+        Enviar Avatar
+        <input 
+            id="photo_chef"
+            type="file"
+            name="photos"
+            accept="image/*"
+            onchange="PhotosUpload.handleFileInput(event)">
+    </div>
+</div>
 
     </section>
 </form>
