--- a/src/app/views/admin/chef/show.njk
+++ b/src/app/views/admin/chef/show.njk
@@ -7,7 +7,7 @@
              <a href="/admin/chef/edit/{{chef.id}}">Editar Chef</a>
              </div>
             <div class="banner-img">
-            <img src="{{chef.avatar_url}}" alt="Imagem de {{chef.image}} ">
+            <img src="{{chef.src}}" alt="Imagem de {{chef.image}} ">
             </div>
         <div class="card-title">
             <div class="item1">
@@ -15,7 +15,7 @@
             </div>
 
             <div class="item1">
-                <div class="chef_recipes">{{chef.total_recipes}} receitas</div>
+                <div class="chef_recipes">{{recipes.length}} {{'receitas' if recipes.length > 1 else 'receita'}}</div>
             </div>
            
               <div class="receitas1"><h2>Receitas</h2></div>
@@ -25,7 +25,7 @@
               <div class="cards">
               <div class="images">
                 <a href="/admin/recipes/{{recipe.id}}">
-                <img src="{{recipe.image}}" alt="" />
+                <img src="{{recipe.src}}" alt="" />
                 </a>
               </div><!-- /images -->
                 <div class="foodcardtxt">
