--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -2,16 +2,21 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/admin/recipes">
-    <section class="details">
+<section class="card">
+    <form method="POST" action="/admin/recipes" enctype="multipart/form-data">
+<section class="details">
+        <div class="header">
+            <h3>Cadastrar receita</h3>
+        </div>
 
-        <h3>Criando receita</h3>
-    <button type="submit">Salvar receita</button>
 
+        <div class="fields">
+            {% include 'admin/recipes/fields.njk' %}
+        </div>
 
-        {% include 'admin/recipes/fields.njk' %}
-
-    </section>
-</form>
+        <button class="button" type="submit">Salvar receita</button>
+        </section>
+    </form>
+</section>
 
 {% endblock content %}
