--- a/src/app/views/admin/recipes/fields.njk
+++ b/src/app/views/admin/recipes/fields.njk
@@ -1,12 +1,29 @@
 <div class="item">
     <div class="title">Imagem da receita</div>
-    <div>
-        <input 
-            type="url"
-            name="image"
-            value="{{recipe.image}}"
-            placeholder="https://"
-        >
+    <div class="container-uploader">
+        <div id="photos-upload">
+            <i class="material-icons">
+                add
+            </i>
+            <input 
+                id="photos-input" 
+                type="file" 
+                name="photos" 
+                multiple 
+                accept="image/*" 
+                onchange="PhotosUpload.handleFileInput(event)">
+        </div>
+        <div id="photos-preview">
+                {% for file in files %}
+                    <div class="photo" id="{{file.id}}">
+                        <img src="{{file.src}}" alt="{{file.name}}">
+                        <i class="material-icons" onclick="PhotosUpload.removeOldPhoto(event)">
+                            close
+                        </i>
+                    </div>
+                {% endfor %}
+                <input type="hidden" name="removed_files">
+        </div>
     </div>
 </div>
 
