--- a/src/app/views/admin/recipes/index.njk
+++ b/src/app/views/admin/recipes/index.njk
@@ -11,11 +11,11 @@
         <div class="receita-admin">
             {% for recipe in recipes %}
                 <div class="receita">
-                    <img src="{{recipe.image}}" alt="">
+                    <img src="{{recipe.src}}" alt="">
                     <div style="padding-left: 20px;">
                         <h3 class="nome">{{recipe.title}}</h3>
                         <p class="autor">por {{recipe.chef_name}}</p>
-                        <a href="/admin/recipes/{{recipe.id}}">Visualizar</a>
+                        <a href="/admin/recipes/{{recipe.recipe_id}}">Visualizar</a>
                     </div>
                 </div>
             {% endfor %}
