Desafio 8: Apresentação e Organização das Receitas Foodfy

--- a/src/app/views/main/searchpage.njk
+++ b/src/app/views/main/searchpage.njk
@@ -20,7 +20,7 @@
               </div><!-- /images -->
                 <div class="foodcardtxt">
                   <p class="nome_recipe">{{recipe.title}}</p>
-                  <p class="autor">por {{chef.name}}</p>
+                  <p class="autor">por {{recipe.chef_name}}</p>
                 </div><!-- /foodcard  -->
                 </div>
                 {%endfor%}
