--- a/src/app/views/admin/recipes/show.njk
+++ b/src/app/views/admin/recipes/show.njk
@@ -2,6 +2,8 @@
 
 {%block css%}
     <link rel="stylesheet" href="/admin.css">
+    <link rel="stylesheet" href="/messages.css">
+
 {%endblock%}
 
 {% block title%}
@@ -84,6 +86,5 @@
         </div>
         </section>
 
-<script src="/script.js"></script>
     
 {%endblock%}
