--- a/src/app/views/main/receita.njk
+++ b/src/app/views/main/receita.njk
@@ -9,6 +9,7 @@
            <h1>{{recipe.title}}</h1>
            <p>por {{chef.name}}</p>
         </div>
+        <div class="recipes-card">
         <div class="topic " id="ingredients">
         <h1>Ingredientes <a>ESCONDER</a></h1> 
         <div class="topic-content">
@@ -33,6 +34,7 @@
         <h1>Informações adicionais<a >MOSTRAR</a></h1> 
         <div class="topic-content hidden">
             <p>{{recipe.information}}</p>
+        </div>
         </div>
         </div>
     </section><!-- banner -->
