--- a/public/admin.css
+++ b/public/admin.css
@@ -16,6 +16,21 @@ header .logo {
     display: flex;
 }
 
+.logo .menu {
+    padding: 5px;
+    padding-left: 28px;
+    display: flex;
+}
+
+header .menu a {
+    font-family: 'Roboto'; 
+    font-weight: bold;
+    font-size: 15px;
+    color: #999999;
+    text-decoration: none;
+    margin-left: 30px;
+}
+
 .title {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -41,6 +56,16 @@ header .logo {
     margin: 50px auto 0 32px;
     padding: 8px 16px;
     text-decoration: none;
+}
+
+.button-exit {
+    background: none;
+    font-family: 'Helvetica';
+    font-weight: bold;
+    font-size: 15px;
+    color: #FFFFFF;
+    margin-left: 728px;
+    cursor: pointer;
 }
 
 .receita-admin {
@@ -318,20 +343,6 @@ button[type="submit"] {
 
 
 /* Chef */
-
-header .menu a {
-    font-family: 'Roboto'; 
-    font-weight: bold;
-    font-size: 15px;
-    color: #999999;
-    text-decoration: none;
-    margin-left: 30px;
-}
-
-.logo .menu {
-    padding: 5px;
-    padding-left: 28px;
-}
 
 .chefes {
     display: grid;
