--- a/src/app/views/admin/parts/header.njk
+++ b/src/app/views/admin/parts/header.njk
@@ -1,11 +1,7 @@
 <header>
     <div class="topo">
             <div class="logo">
-            {% if session.isAdmin %}
-            <a href="/admin/users/list"><img src="/img/logo-admin.png" alt=""></a>
-            {% else %}
-            <a href="/admin/users/profile"><img src="/img/logo-admin.png" alt=""></a>
-            {% endif %}
+            <a href="/main"><img src="/img/logo-admin.png" alt=""></a>
                 
                 <div class="menu">
                     <a href="/admin/recipes">RECEITAS</a>
