--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -27,6 +27,7 @@
                 <a href="/main/show">Sobre</a>
                 <a href="/main/receitas">Receitas</a>
                 <a href="/main/chefs">Chefs</a>
+                <a href="/admin/users/login">Login</a>
                 {% block inputSeach %}
                     {% include "././admin/recipes/input.njk" %}
                 {% endblock inputSeach %}
